Updated navigation and UI (version 0.2)

--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -2,7 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/loan__fragment_toolbar"
+        app:navigationIcon="@drawable/ic_account_circle"
+        app:title="@string/loan_number"
+        app:titleTextColor="@color/white"
+        app:menu="@menu/loan_fragment_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/purple_500" />
 
     <TextView
         android:id="@+id/loan_amount"
