--- a/app/src/main/res/layout/fragment_loans_list.xml
+++ b/app/src/main/res/layout/fragment_loans_list.xml
@@ -2,7 +2,50 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/loan_list_fragment_toolbar"
+        app:navigationIcon="@drawable/ic_account_circle"
+        app:title="@string/list_of_loans"
+        android:layout_gravity="top"
+        app:titleTextColor="@color/white"
+        app:menu="@menu/loans_list_menu_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/purple_500" />
+
+    <LinearLayout
+        android:id="@+id/error_layout"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/error_image"
+            android:src="@drawable/ic_error"
+            android:layout_width="200dp"
+            android:layout_height="200dp" />
+
+        <TextView
+            android:layout_marginTop="6dp"
+            android:textColor="@color/red"
+            android:text="@string/successful_new_loan_request"
+            android:id="@+id/error_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <ProgressBar
+        android:layout_weight="1"
+        android:id="@+id/loading_progress_bar"
+        android:layout_width="wrap_content"
+        android:indeterminateDrawable="@drawable/spinner_ring"
+        android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/loan_recycler_view"
