--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,22 +9,28 @@
         android:name="com.example.chernykhhomework.ui.fragments.RegistrationFragment"
         android:label="RegistrationFragment">
         <action
-            app:popUpToInclusive="true"
             android:id="@+id/action_registrationFragment_to_newLoanFragment"
-            app:destination="@id/newLoanFragment" />
+            app:destination="@id/newLoanFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
         <action
-            app:popUpToInclusive="true"
             android:id="@+id/action_registrationFragment_to_loansListFragment"
-            app:destination="@id/loansListFragment" />
+            app:destination="@id/loansListFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="isAppLaunching"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/newLoanFragment"
         android:name="com.example.chernykhhomework.ui.fragments.NewLoanFragment"
         android:label="NewLoanFragment">
         <action
-            app:popUpToInclusive="true"
             android:id="@+id/action_newLoanFragment_to_loansListFragment"
-            app:destination="@id/loansListFragment" />
+            app:destination="@id/loansListFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loansListFragment"
@@ -38,10 +44,6 @@
             app:popUpToInclusive="true"
             android:id="@+id/action_loansListFragment_to_newLoanFragment"
             app:destination="@id/newLoanFragment" />
-        <action
-            app:popUpToInclusive="true"
-            android:id="@+id/action_loansListFragment_to_registrationFragment"
-            app:destination="@id/registrationFragment" />
     </fragment>
     <fragment
         android:id="@+id/loanFragment"
@@ -51,4 +53,7 @@
             android:name="id"
             app:argType="integer" />
     </fragment>
+    <action
+        android:id="@+id/action_global_registrationFragment"
+        app:destination="@id/registrationFragment" />
 </navigation>
