--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -16,11 +16,32 @@
         android:background="@color/purple_500" />
 
     <ProgressBar
-        android:layout_weight="1"
+        android:layout_gravity="center"
         android:id="@+id/loading_progress_bar"
         android:layout_width="wrap_content"
         android:indeterminateDrawable="@drawable/spinner_ring"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:id="@+id/error_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/error_image"
+            android:src="@drawable/ic_error"
+            android:layout_width="200dp"
+            android:layout_height="200dp" />
+
+        <TextView
+            android:layout_marginTop="6dp"
+            android:textColor="@color/red"
+            android:id="@+id/error_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/content_layout"
