Redesigned graphical interface (version 0.5)

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -6,6 +6,8 @@
     android:orientation="vertical">
 
     <TextView
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:textColor="@color/blue_191"
         android:id="@+id/welcome_text_view"
         android:layout_width="wrap_content"
         android:text="@string/welcome"
