--- a/app/src/main/res/layout/fragment_help_dialog.xml
+++ b/app/src/main/res/layout/fragment_help_dialog.xml
@@ -4,12 +4,14 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:layout_marginTop="6dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_500"
+        android:background="@color/blue_191"
         android:orientation="vertical">
 
         <ImageView
+            android:layout_margin="6dp"
             android:src="@drawable/ic_update"
             android:id="@+id/help_image"
             android:layout_gravity="center"
@@ -20,16 +22,17 @@
         <TextView
             android:id="@+id/help_text"
             android:textColor="@color/white"
-            android:text="THis icon is very coooooool"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:layout_marginTop="12dp"
+            android:layout_marginBottom="6dp"
             android:id="@+id/help_page_counter"
             android:textColor="@color/white"
-            android:text="1/1"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
