--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -13,9 +13,10 @@
         app:menu="@menu/loan_fragment_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_500" />
+        android:background="@color/blue_191" />
 
     <ProgressBar
+        android:visibility="gone"
         android:layout_gravity="center"
         android:id="@+id/loading_progress_bar"
         android:layout_width="wrap_content"
@@ -23,6 +24,7 @@
         android:layout_height="match_parent" />
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/error_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -60,6 +62,14 @@
         <TextView
             android:id="@+id/loan_date"
             android:text="@string/date"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="6dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/loan_state"
+            android:text="@string/state"
             android:layout_marginStart="6dp"
             android:layout_marginTop="6dp"
             android:layout_width="wrap_content"
@@ -106,11 +116,9 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/loan_state"
-            android:text="@string/state"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="6dp"
-            android:layout_width="wrap_content"
+            android:layout_margin="6dp"
+            android:id="@+id/loan_info_text_view"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
