--- a/app/src/main/res/layout/fragment_loans_list.xml
+++ b/app/src/main/res/layout/fragment_loans_list.xml
@@ -15,7 +15,7 @@
         app:menu="@menu/loans_list_menu_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_500" />
+        android:background="@color/blue_191" />
 
     <LinearLayout
         android:id="@+id/error_layout"
