--- a/app/src/main/res/layout/fragment_new_loan.xml
+++ b/app/src/main/res/layout/fragment_new_loan.xml
@@ -16,189 +16,199 @@
         app:navigationIcon="@drawable/ic_account_circle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_500"
+        android:background="@color/blue_191"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:id="@+id/content_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/start_guideline"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="10dp" />
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/start_guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="10dp" />
 
 
-        <TextView
-            android:id="@+id/amount_title_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/amount_title"
-            app:layout_constraintBottom_toBottomOf="@id/amount_text_view"
-            app:layout_constraintStart_toStartOf="@id/start_guideline"
-            app:layout_constraintTop_toTopOf="@id/amount_text_view" />
+            <TextView
+                android:id="@+id/amount_title_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/amount_title"
+                app:layout_constraintBottom_toBottomOf="@id/amount_text_view"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintTop_toTopOf="@id/amount_text_view" />
 
-        <EditText
-            android:id="@+id/amount_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:inputType="number"
-            android:minWidth="100dp"
-            app:layout_constraintBottom_toBottomOf="@id/amount_title_text_view"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@id/amount_title_text_view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            <EditText
+                android:id="@+id/amount_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:inputType="number"
+                android:minWidth="100dp"
+                app:layout_constraintBottom_toBottomOf="@id/amount_title_text_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@id/amount_title_text_view"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
-        <TextView
-            android:id="@+id/first_name_title_text_view"
-            android:text="@string/firstname_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/first_name_text_view"
-            app:layout_constraintStart_toStartOf="@id/start_guideline"
-            app:layout_constraintBottom_toBottomOf="@id/first_name_text_view" />
+            <TextView
+                android:id="@+id/first_name_title_text_view"
+                android:text="@string/firstname_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/first_name_text_view"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintBottom_toBottomOf="@id/first_name_text_view" />
 
-        <EditText
-            android:id="@+id/first_name_text_view"
-            android:layout_width="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="6dp"
-            android:layout_height="wrap_content"
-            android:minWidth="100dp"
-            app:layout_constraintTop_toBottomOf="@id/amount_text_view"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@id/first_name_title_text_view"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <EditText
+                android:id="@+id/first_name_text_view"
+                android:layout_width="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="6dp"
+                android:layout_height="wrap_content"
+                android:minWidth="100dp"
+                app:layout_constraintTop_toBottomOf="@id/amount_text_view"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@id/first_name_title_text_view"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
-            android:id="@+id/last_name_title_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/lastname_title"
-            app:layout_constraintBottom_toBottomOf="@id/last_name_text_view"
-            app:layout_constraintStart_toStartOf="@id/start_guideline"
-            app:layout_constraintTop_toTopOf="@+id/last_name_text_view" />
+            <TextView
+                android:id="@+id/last_name_title_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lastname_title"
+                app:layout_constraintBottom_toBottomOf="@id/last_name_text_view"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintTop_toTopOf="@+id/last_name_text_view" />
 
-        <EditText
-            android:id="@+id/last_name_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="6dp"
-            android:minWidth="100dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@id/last_name_title_text_view"
-            app:layout_constraintTop_toBottomOf="@id/first_name_text_view" />
+            <EditText
+                android:id="@+id/last_name_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="6dp"
+                android:minWidth="100dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@id/last_name_title_text_view"
+                app:layout_constraintTop_toBottomOf="@id/first_name_text_view" />
 
-        <TextView
-            android:id="@+id/phone_number_title_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/phone_number_title"
-            app:layout_constraintBottom_toBottomOf="@id/phone_number_text_view"
-            app:layout_constraintStart_toStartOf="@id/start_guideline"
-            app:layout_constraintTop_toTopOf="@+id/phone_number_text_view" />
+            <TextView
+                android:id="@+id/phone_number_title_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/phone_number_title"
+                app:layout_constraintBottom_toBottomOf="@id/phone_number_text_view"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintTop_toTopOf="@+id/phone_number_text_view" />
 
-        <EditText
-            android:id="@+id/phone_number_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="6dp"
-            android:inputType="phone"
-            android:minWidth="100dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@id/phone_number_title_text_view"
-            app:layout_constraintTop_toBottomOf="@id/last_name_text_view"
-            tools:ignore="TextFields" />
+            <EditText
+                android:id="@+id/phone_number_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="6dp"
+                android:inputType="phone"
+                android:minWidth="100dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@id/phone_number_title_text_view"
+                app:layout_constraintTop_toBottomOf="@id/last_name_text_view"
+                tools:ignore="TextFields" />
 
-        <TextView
-            android:id="@+id/conditions_title"
-            android:text="@string/conditions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/phone_number_text_view"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <TextView
+                android:layout_marginTop="12dp"
+                android:textColor="@color/light_orange"
+                android:id="@+id/conditions_title"
+                android:text="@string/conditions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/phone_number_text_view"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
-            android:id="@+id/amount_condition"
-            android:text="@string/max_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/start_guideline"
-            app:layout_constraintTop_toBottomOf="@id/conditions_title" />
+            <TextView
+                android:layout_marginTop="6dp"
+                android:textColor="@color/light_orange"
+                android:id="@+id/amount_condition"
+                android:text="@string/max_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintTop_toBottomOf="@id/conditions_title" />
 
-        <TextView
-            android:id="@+id/percent_condition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/percent2"
-            app:layout_constraintTop_toBottomOf="@id/amount_condition"
-            app:layout_constraintStart_toStartOf="@id/start_guideline" />
+            <TextView
+                android:layout_marginTop="6dp"
+                android:textColor="@color/light_orange"
+                android:id="@+id/percent_condition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/percent2"
+                app:layout_constraintTop_toBottomOf="@id/amount_condition"
+                app:layout_constraintStart_toStartOf="@id/start_guideline" />
 
-        <TextView
-            android:id="@+id/period_condition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/period"
-            app:layout_constraintStart_toStartOf="@id/start_guideline"
-            app:layout_constraintTop_toBottomOf="@+id/percent_condition" />
+            <TextView
+                android:layout_marginTop="6dp"
+                android:textColor="@color/light_orange"
+                android:id="@+id/period_condition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/period"
+                app:layout_constraintStart_toStartOf="@id/start_guideline"
+                app:layout_constraintTop_toBottomOf="@+id/percent_condition" />
 
-        <TextView
-            android:id="@+id/empty_fields_warning_text_view"
-            android:text="@string/empty_fields_warning"
-            android:textColor="@color/red"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_gravity="center"
-            android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@id/period_condition"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <TextView
+                android:id="@+id/empty_fields_warning_text_view"
+                android:text="@string/empty_fields_warning"
+                android:textColor="@color/red"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_gravity="center"
+                android:visibility="invisible"
+                app:layout_constraintTop_toBottomOf="@id/period_condition"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
-            android:id="@+id/arrange_button"
-            android:layout_marginEnd="12dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="@string/submit"
-            app:layout_constraintTop_toBottomOf="@id/empty_fields_warning_text_view"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <Button
+                android:id="@+id/arrange_button"
+                android:layout_marginEnd="12dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="@string/submit"
+                app:layout_constraintTop_toBottomOf="@id/empty_fields_warning_text_view"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
-            android:id="@+id/to_loan_list_button"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="@string/to_list"
-            app:layout_constraintTop_toBottomOf="@id/empty_fields_warning_text_view"
-            app:layout_constraintStart_toStartOf="parent" />
+            <Button
+                android:id="@+id/to_loan_list_button"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="@string/to_list"
+                app:layout_constraintTop_toBottomOf="@id/empty_fields_warning_text_view"
+                app:layout_constraintStart_toStartOf="parent" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/request_result_layout"
@@ -218,6 +228,9 @@
             android:layout_height="200dp" />
 
         <TextView
+            android:gravity="center"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginTop="6dp"
             android:text="@string/successful_new_loan_request"
             android:id="@+id/request_result_text"
@@ -225,19 +238,25 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:layout_marginTop="12dp"
+            android:textColor="@color/light_grey"
             android:text="@string/tap_screen_to_continue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-        <ProgressBar
-            android:layout_gravity="center"
-            android:id="@+id/loading_progress_bar"
-            android:layout_width="wrap_content"
-            android:indeterminateDrawable="@drawable/spinner_ring"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-    </LinearLayout>
+
+    <ProgressBar
+        android:layout_gravity="center"
+        android:id="@+id/loading_progress_bar"
+        android:layout_width="wrap_content"
+        android:indeterminateDrawable="@drawable/spinner_ring"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+</LinearLayout>
+
+
+
